--- a/composer.json
+++ b/composer.json
@@ -8,13 +8,21 @@
     ],
     "license": "MIT",
     "require": {
-        "php": ">=7.1.0"
+        "php": "^8.0",
+        "laravel/nova": "^4.13",
+        "nova-kit/nova-packages-tool": "^1.3.4"
     },
     "autoload": {
         "psr-4": {
             "SaintSystems\\Nova\\ActionsLeft\\": "src/"
         }
     },
+    "repositories": [
+        {
+            "type": "composer",
+            "url": "https://nova.laravel.com"
+        }
+    ],
     "extra": {
         "laravel": {
             "providers": [
