--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "vue-template-compiler": "^2.6.14"
     },
     "dependencies": {
-        "@vue/compat": "^3.2.29"
+        "@vue/compat": "^3.2.29",
+        "@inertiajs/inertia": "^0.11.0"
     }
 }
