--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
         "vue-template-compiler": "^2.6.14"
     },
     "dependencies": {
-        "@vue/compat": "^3.2.29",
-        "@inertiajs/inertia": "^0.11.0"
+        "@inertiajs/vue3": "^2.0.2",
+        "laravel-nova-ui": "^0.4.12",
+        "vuex": "^4.1.0"
     }
 }
